/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_package = "com.dremio.service.jobs.metadata.proto";
option optimize_for = SPEED;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "JobsServiceRPC";

package dremio.job;

import "dataset-common.proto";

message From {
  enum FromType {
    TABLE = 0;
    SQL = 1;
  }
  FromType type = 1;
  string alias = 2;
  string value = 3;
}

message Expression {
  enum ExpressionType {
    REFERENCE = 0;
    CALCULATED = 1;
  }
  ExpressionType type = 1;
  string value = 2;
}

message Column {
  string name = 1;
  Expression expression = 2;
}

message Order {
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  string name = 1;
  OrderDirection direction = 2;
}

// subset of com.dremio.dac.proto.model.dataset.VirtualDatasetState that need to be collected through JobStatusListener.metadataCollected()
message VirtualDatasetState {
  From from = 1;
  repeated Column columns = 2;
  repeated Order orders = 3;
  repeated string referredTables = 4;
  repeated string context = 5;
}

message QueryMetadata {
  VirtualDatasetState state = 1;
  repeated com.dremio.service.namespace.dataset.proto.ViewFieldType fieldType = 2;
}
